<resources>
    <string name="app_name">VideoEditor</string>
    <string name="record">Record</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="custom">Custom</string>
    <string name="cut">Cut</string>
    <string name="add_music">Add music</string>
    <string name="load_audio">Load audio</string>
    <string name="details">Details</string>
</resources>
