<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />

    <TextView
        android:id="@+id/tvProgress"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btnOpenGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_gallery"
        android:layout_toEndOf="@id/btnRecord"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btnPlayStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_toEndOf="@id/btnOpenGallery"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>